--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Todos $http</title>
+  <title>BTGK</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.js"></script>
   <script src="app.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
